src/test/ui/issues/issue-22037.stderr
error[E0576]: cannot find associated type `X` in trait `A`
  --> $DIR/issue-22037.rs:3:33
   |
LL |     fn a(&self) -> <Self as A>::X;
   |                                 ^ not found in `A`

error: aborting due to previous error

